kubernetes/apps/visitor-counter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cleanbrain-me-visitor-counter
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
